# test_oComplex

./: .env_template  .gitignore  Dockerfile  README.md  cities_db.py  config.py  docker-compose.yml  main.py  pyproject.toml
static/: scripts.js  styles.css
static/templates/: 404.html  base.html  index.html  stats.html  weather.html
tests/: conftest.py  test_app.py
weather_api/: open_meteo.py  utils.py
