[tool.poetry]
name = "test-ocomplex"
version = "0.1.0"
description = ""
authors = ["Memorizu <kaidohmary@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
requests = "^2.32.3"
openmeteo-requests = "^1.2.0"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"
pydantic-settings = "^2.3.4"
pydantic = "^2.8.2"
redis = "^5.0.7"
flask-caching = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
